# ml-stuff

./: README.md  densenet_cifar10.py  main.py  main2.py  mnist_conv.py  ottt_cifar10.py  pyproject.toml  train.py  vgg16_cifar.py  vgg16_cifar10.py
mlstuff/: __init__.py  augment.py  networks.py  scripts.py
tests/: test_networks.py
